# ASC-bla

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py  test_matrix.pickle
ASCsoft.egg-info/: PKG-INFO  SOURCES.txt
TomBino/: __init__.py
TomBino.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_skbuild/linux-x86_64-3.10/cmake-build/: CMakeCache.txt  CMakeSpec.json  Makefile  cmake_install.cmake  install_manifest.txt  test_lapack  test_matrix  test_vector
_skbuild/linux-x86_64-3.10/cmake-install/ASCsoft/include/: vector.h
_skbuild/linux-x86_64-3.10/cmake-install/TomBino/: __init__.py
_skbuild/linux-x86_64-3.10/setuptools/lib.linux-x86_64-3.10/ASCsoft/include/: lapack_interface.h  matrix.h
_skbuild/linux-x86_64-3.10/setuptools/lib.linux-x86_64-3.10/TomBino/include/: vector.h
docs/: conf.py  d  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: index.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
py_tests/: test_lapack.py  test_matrix.py
src/: bind_bla.cpp  expression.h  f2c.h  lapack_interface.h  matrix.h  tensor.h  vector.h
tests/: test_lapack.cc  test_vector.cc
tests_cpp/: CMakeLists.txt  test_lapack.cc  test_matrix.cc  test_operations.cc  test_tensor.cc  test_vec.cc  test_vector.cc
tests_py/: test_lapack.py  test_matrix.py  test_vec.py  test_vector.py
